# can_msg_visualizer

./: README.md  prompt.md  pyproject.toml
samples/: example.asc  example.dbc  generate_large_asc.py
src/can_visualizer/: __init__.py  app.py  main.py
src/can_visualizer/core/: __init__.py  cache.py  data_store.py  decoder.py  models.py  parser.py  theme_manager.py
src/can_visualizer/utils/: __init__.py  logging_config.py
src/can_visualizer/widgets/: __init__.py  fullscreen_plot.py  log_table.py  plot_widget.py  selected_signals.py  signal_browser.py  signal_selector_dialog.py  state_diagram.py
src/can_visualizer/workers/: __init__.py  decode_pool.py  parse_worker.py
tests/: test_data_store.py
