[project]
name = "can-visualizer"
version = "1.0.0"
description = "Professional CAN bus analysis tool for parsing, decoding, and visualizing CAN logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cantools>=41.0.2",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.1",
    "python-can>=4.6.1",
]

[project.scripts]
can-visualizer = "can_visualizer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/can_visualizer"]
